Try-Catch-Hack um Abwertskopatibilitätsproblem von php7 auf php5.6 in AdminAction zu behen, da count() in php7 anders implementiert ist als in 5.6... Lösung sehr dirty!

--- a/app/Resources/views/admin/admin.html.twig
+++ b/app/Resources/views/admin/admin.html.twig
@@ -5,7 +5,7 @@
 {% block headerBalken2 %}
     <h1 class="col-8 header-titel">Administratorbereich</h1>
     <div class="col-4 logout-btn">
-        <a class="simple-a" href="{{ path('logout') }}" title="als Administrator abmelden">logout</a></div>
+        <a class="" href="{{ path('logout') }}" title="als Administrator abmelden">logout</a></div>
 {% endblock %}
 
 {% block body %}
