--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -107,7 +107,7 @@
 
         <!-- gesamten header kopieren weil der erste "echte" header display:fixed hat, und somit den restlichen Content nicht vernünftig nach unten drücken kann! -->
 
-        <div class="top container-fluid" id="top" style="visibility: hidden!important; z-index: -9999!important;">
+        <div class="top container-fluid" style="visibility: hidden!important; z-index: -9999!important;">
             <div class="header-balken1 row">
                 <div class="col-9">
                     <a class="homepage-button" href="{{ path('_index') }}">
