--- a/app/Resources/views/admin/upload_result.html.twig
+++ b/app/Resources/views/admin/upload_result.html.twig
@@ -5,7 +5,7 @@
 {% block headerBalken2 %}
     <h1 class="col-8 header-titel">Administratorbereich</h1>
     <div class="col-4 logout-btn">
-        <a class="simple-a" href="{{ path('logout') }}" title="als Administrator abmelden">logout</a></div>
+        <a class="" href="{{ path('logout') }}" title="als Administrator abmelden">logout</a></div>
 {% endblock %}
 
 {% block body %}
