Favoriten: alle favs löschen button und mailto-Anfrage fertig programmiert.

--- a/app/Resources/views/detail/detail.html.twig
+++ b/app/Resources/views/detail/detail.html.twig
@@ -29,7 +29,7 @@
                 <button class="img-button add-fav-button" title="zu Favoriten hinzufügen" data-id="{{ archivierung.id }}">
                     <img
                         class="add-fav-button-img-leer"
-                        alt="zu Favoriten hinzufügen add-fav-button-img-leer"
+                        alt="zu Favoriten hinzufügen"
                         src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_leer.svg') }}"
                         style="display: none;"
                     />
