--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -42,7 +42,8 @@
 
 
 
-/* style-reset button */
+
+/* generell */
 .img-button{
     border: none;
     outline: none!important;
@@ -66,9 +67,6 @@
     -moz-box-sizing: content-box;
     box-sizing: content-box;
 
-    background: none;
-    border: 0;
-
     /* Corrects font smoothing for webkit */
     -webkit-font-smoothing: inherit;
     -moz-osx-font-smoothing: inherit;
@@ -82,7 +80,36 @@ button::-moz-focus-inner {
     padding: 0;
 }
 
-/* generell */
+.black-button{
+    font-size: 23px;
+    border: none;
+    cursor: pointer;
+    background: black;
+    color: white;
+    padding-top: 0;
+    padding-bottom: 2px;
+    padding-left: 3px;
+    padding-right: 5px;
+    margin:0;
+
+    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+    line-height: normal;
+
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+
+    /* Corrects font smoothing for webkit */
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+
+    /* Corrects inability to style clickable `input` types in iOS */
+    -webkit-appearance: none;
+}
+.black-button:active, .black-button:focus{
+    color: rgb(248,197,198);
+}
+
 * {
     font-family: 'Circular Std Book', sans-serif;
     color: black;
@@ -90,6 +117,10 @@ button::-moz-focus-inner {
 
 h1,h2,h3,h4,h5,h6,p,a{
     color: black;
+}
+
+.big-text{
+    font-size: 23px;
 }
 
 a:hover{
@@ -117,6 +148,7 @@ body {
 
 div.inhalt{
     margin: 0;
+    margin-bottom: 50px;
     padding: 30px;
     padding-bottom: 0;
 }
@@ -137,7 +169,6 @@ hr{
     border-top: 1px solid black;
 }
 
-
 .overlay{
     position: fixed;
     height: 101vh;
@@ -149,6 +180,10 @@ hr{
     right: 0;
     left: 0;
     background-color: white;
+}
+
+.mailto, .mailto:hover{
+    text-decoration: underline;
 }
 
 
@@ -246,8 +281,6 @@ hr{
 /* Mansory Grid: */
 
 /* --- Grid generell */
-.grid-item {
-}
 .grid-item img{
     max-width: 100%;
     height: auto;
@@ -294,10 +327,6 @@ hr{
 
 
 /* index */
-.images-overview{
-    margin-bottom: 50px;
-}
-
 .suchfilter-btn{
     display: inline-block;
     text-decoration: none;
@@ -347,6 +376,50 @@ hr{
 }
 
 
+
+/* Favoriten: */
+.favorites-overview .grid-item img{
+    max-width: 70%;
+    height: auto;
+    width:auto;
+ }
+
+.favorites-overview .add-fav-side{
+    display: inline-block;
+    width: 27%;
+    float: right;
+    vertical-align: top;
+}
+
+.favorites-overview .add-fav-side .add-fav-button{
+    display: inline-block;
+    float: left;
+    margin-top: 5px;
+}
+
+.favorites-overview .add-fav-side .add-fav-button img{
+    width: 37px;
+}
+
+.favorites-delete-all{
+    margin-top: 25px;
+    margin-bottom: 16px;
+}
+.favorites-delete-all .favorites-delete-all-question{
+    display: block;
+}
+
+
+.favorites-mail{
+    margin-bottom: 170px;
+}
+.favorites-mail hr{
+    margin-bottom: 18px;
+}
+
+
+
+
 /* Adminbereich: */
 .logout-btn{
     margin-top: 15px;
@@ -361,6 +434,8 @@ hr{
     bottom: 0;
     background-color: white;
     position: fixed;
+    padding-right: 30px;
+    padding-left: 30px;
 }
 .footer hr{
      margin-top: 1px;
