--- a/app/Resources/views/detail/detail.html.twig
+++ b/app/Resources/views/detail/detail.html.twig
@@ -43,154 +43,121 @@
             </div>
             <div class="detail-text">
                 <p class="detail-text-block">
-                    <span class="detail-text-label">Jahr:</span> {{ archivierung.jahrString }}<br/>
 
-                    <span class="detail-text-label">Titel:</span>
+                    {% if archivierung.jahrString is defined %}
+                        <span class="detail-text-label">Jahr:</span> {{ archivierung.jahrString }}<br/>
+                    {% endif %}
+
                     {% if archivierung.infosArray["Titel"] is defined %}
+                        <span class="detail-text-label">Titel: </span>
                         {{ archivierung.infosArray["Titel"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Auftraggeber:</span>
                     {% if archivierung.infosArray["Auftraggeber"] is defined %}
+                        <span class="detail-text-label">Auftraggeber:</span>
                         {{ archivierung.infosArray["Auftraggeber"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Objektkategorie:</span>
                     {% if archivierung.infosArray["Objektkategorie"] is defined %}
+                        <span class="detail-text-label">Objektkategorie:</span>
                         {{ archivierung.infosArray["Objektkategorie"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
                 </p>
 
                 <p class="detail-text-block">
-                    <span class="detail-text-label">Gestaltung:</span>
+
                     {% if archivierung.infosArray["Gestaltung"] is defined %}
+                        <span class="detail-text-label">Gestaltung:</span>
                         {{ archivierung.infosArray["Gestaltung"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Fotografie:</span>
                     {% if archivierung.infosArray["Fotografie"] is defined %}
+                        <span class="detail-text-label">Fotografie:</span>
                         {{ archivierung.infosArray["Fotografie"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Druckerei:</span>
                     {% if archivierung.infosArray["Druckerei"] is defined %}
+                        <span class="detail-text-label">Druckerei:</span>
                         {{ archivierung.infosArray["Druckerei"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Autor:</span>
                     {% if archivierung.infosArray["Autor"] is defined %}
+                       <span class="detail-text-label">Autor:</span>
                         {{ archivierung.infosArray["Autor"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
                 </p>
 
                 <p class="detail-text-block">
-                    <span class="detail-text-label">Maße:</span>
+
                     {% if archivierung.infosArray["Masse"] is defined %}
+                        <span class="detail-text-label">Maße:</span>
                         {{ archivierung.infosArray["Masse"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Umfang:</span>
                     {% if archivierung.infosArray["Umfang"] is defined %}
+                        <span class="detail-text-label">Umfang:</span>
                         {{ archivierung.infosArray["Umfang"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Material:</span>
                     {% if archivierung.infosArray["Material"] is defined %}
+                        <span class="detail-text-label">Material:</span>
                         {{ archivierung.infosArray["Material"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Produktionsverfahren:</span>
                     {% if archivierung.infosArray["Produktionsverfahren"] is defined %}
+                        <span class="detail-text-label">Produktionsverfahren:</span>
                         {{ archivierung.infosArray["Produktionsverfahren"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Sprache:</span>
                     {% if archivierung.infosArray["Sprache"] is defined %}
+                        <span class="detail-text-label">Sprache:</span>
                         {{ archivierung.infosArray["Sprache"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Schrift:</span>
                     {% if archivierung.infosArray["Schrift"] is defined %}
+                        <span class="detail-text-label">Schrift:</span>
                         {{ archivierung.infosArray["Schrift"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Farbe:</span>
                     {% if archivierung.infosArray["Farbe"] is defined %}
+                        <span class="detail-text-label">Farbe:</span>
                         {{ archivierung.infosArray["Farbe"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Bilddarstellung:</span>
                     {% if archivierung.infosArray["Bilddarstellung"] is defined %}
+                        <span class="detail-text-label">Bilddarstellung:</span>
                         {{ archivierung.infosArray["Bilddarstellung"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
                 </p>
 
                 <p class="detail-text-block">
-                    <span class="detail-text-label">Hinweis:</span>
+
                     {% if archivierung.infosArray["Hinweis"] is defined %}
+                        <span class="detail-text-label">Hinweis:</span>
                         {{ archivierung.infosArray["Hinweis"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Produktkategorie:</span>
                     {% if archivierung.infosArray["Produktkategorie"] is defined %}
+                        <span class="detail-text-label">Produktkategorie:</span>
                         {{ archivierung.infosArray["Produktkategorie"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Text:</span>
                     {% if archivierung.infosArray["Text"] is defined %}
+                        <span class="detail-text-label">Text:</span>
                         {{ archivierung.infosArray["Text"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
-                    <span class="detail-text-label">Ereignisse:</span>
                     {% if archivierung.infosArray["Ereignisse"] is defined %}
+                        <span class="detail-text-label">Ereignisse:</span>
                         {{ archivierung.infosArray["Ereignisse"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
                 </p>
 
                 <p class="detail-text-block">
-                    <span class="detail-text-label">Archiv:</span>
+
                     {% if archivierung.infosArray["Archiv"] is defined %}
+                        <span class="detail-text-label">Archiv:</span>
                         {{ archivierung.infosArray["Archiv"] }}<br/>
-                    {% else %}
-                        <br/>
                     {% endif %}
 
                     <span class="detail-text-label">Archivierung-ID:</span>
