--- a/app/Resources/views/favoriten/favoriten.html.twig
+++ b/app/Resources/views/favoriten/favoriten.html.twig
@@ -62,7 +62,7 @@
             <hr>
             Anfrage über ausgewählte Objekte an
             <a class="mailto"
-               href="mailto:mail@thonetarchiv.de?subject=Anfrage zum Download von Grafiken&body=Hallo, ich bitte um eine Downloadmöglichkeit für die Archivierungen mit den folgenden IDs: {% for archivierung in archivierungen %}{{ archivierung.id }}, {% endfor %}"
+               href="mailto:mail@thonetarchiv.de?subject=Anfrage zum Download von Grafiken&body=Hallo, ich bitte um eine Download der Archivierungen mit den IDs: {% for archivierung in archivierungen %}{{ archivierung.id }}, {% endfor %}"
             >mail@thonetarchiv.de</a>
         </section>
 
