kleinigkeiten.   ionSlider initialisiert und gestyled.

--- a/app/Resources/views/admin/admin.html.twig
+++ b/app/Resources/views/admin/admin.html.twig
@@ -24,3 +24,10 @@
     </section>
 
 {% endblock %}
+
+
+{% block javascripts %}
+    <script type="text/javascript">
+        $("#form_save").addClass("black-button");  // Hack damit Hochladen-Button auch vernuenftig gestyled ist!
+    </script>
+{% endblock %}
