--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -31,6 +31,17 @@
         <div class="suche-overlay-filter">
             FILTER!
             <input type="text" id="testInput">
+
+            <input type="text" class="js-range-slider" name="my_range" value=""
+                   data-type="double"
+                   data-min="1960"
+                   data-max="2018"
+                   data-from="1960"
+                   data-to="2000"
+                   data-hide-min-max="true"
+                   data-prettify-enabled="false"
+            />
+
         </div>
     </section>
 {% endblock %}
