--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -24,6 +24,6 @@
         {# If you want to control the URL the user is redirected to on success: #}
         <input type="hidden" name="_target_path" value="/admin" />
 
-        <button type="submit">login</button>
+        <button class="black-button" type="submit">login</button>
     </form>
 {% endblock %}
