--- a/app/Resources/views/default/arbeitenImKontext.html.twig
+++ b/app/Resources/views/default/arbeitenImKontext.html.twig
@@ -8,8 +8,23 @@
 
 {% block body %}
 
-    <h1>
-        Arbeiten im Kontext
-    </h1>
+    <p class="big-text">
+        Das Forschungsprojekt »Die Marke Thonet« begann im Firmenarchiv
+        Thonets, in Frankenberg an der Eder. Dieses verfügt über die gesamten,
+        noch erhaltenen Produktkataloge, Drucksachen, Erscheinungsbilder
+        und Fotografien der 200-jährigen Firmengeschichte. Die dort
+        archivierten, unveröffentlichten Objekte waren bisher nicht digitalisiert
+        und somit nur vor Ort durchsuchbar. Dies ändert sich nun, denn Ziel
+        des Projektes ist es das Material der Öffentlichkeit zugänglich zu
+        machen und als wachsende Sammlung ein Hilfsmittel für alle, die über
+        die Geschichte Thonets forschen wollen, zur Verfügung zu stellen.
+        Die im Archiv verzeichneten Arbeiten sind von Thonet meist selbst
+        beauftragt oder erstellt worden. Es gibt jedoch zahlreiche Arbeiten von
+        Künstlern, Grafikern, Architekten und vielen mehr, welche Thonet zum
+        Anlass nahmen freie Arbeiten zu entwerfen oder sie dem
+        Traditionsunternehmen zu widmen. Diese Arbeiten werden hier separat
+        gesammelt und vorgestellt. Genau wie das Archiv ist dies eine stetig
+        wachsende Sammlung.
+    </p>
 {% endblock %}
 
