--- a/app/Resources/views/default/dasProjekt.html.twig
+++ b/app/Resources/views/default/dasProjekt.html.twig
@@ -8,8 +8,48 @@
 
 {% block body %}
 
-    <h1>
-        Das Projekt
-    </h1>
+    <p class="big-text">
+        Das Forschungsprojekt »Die Marke Thonet« begann im Firmenarchiv
+        Thonets, in Frankenberg an der Eder. Dieses verfügt über die gesamten,
+        noch erhaltenen Produktkataloge, Drucksachen, Erscheinungsbilder
+        und Fotografien der 200-jährigen Firmengeschichte. Die dort
+        archivierten, unveröffentlichten Objekte waren bisher nicht digitalisiert
+        und somit nur vor Ort durchsuchbar. Dies ändert sich nun, denn Ziel
+        des Projektes ist es das Material der Öffentlichkeit zugänglich zu
+        machen und als wachsende Sammlung ein Hilfsmittel für alle, die über
+        die Geschichte Thonets forschen wollen, zur Verfügung zu stellen.
+        <br/>
+        <br/>
+        Zuerst entstand eine Publikation, welche eine Chronologie umfasst, die
+        von 1819 bis 2019 Kataloge und Erscheinungsbilder des Unternehmens
+        präsentiert und mit kulturellen und politischen Veränderungen in
+        Verbindung stellt. Sie erschien im September 2018 bei dem Grafik- und
+        Architekturverlag Niggli und ist dort unter dem Titel »Die Marke Thonet
+        – ein Blick auf ihre grafische Geschichte« erhältlich.<br/>
+        <a href="http://www.niggli.ch/de/die-marke-thonet-ein-blick-auf-ihre-grafischegeschichte.
+        html">http://www.niggli.ch/de/die-marke-thonet-ein-blick-auf-ihre-grafischegeschichte.
+        html</a>
+        <br/>
+        <br/>
+        Das digitale Archiv Thonets ist seit März 2019 online und repräsentiert
+        zum Zeitpunkt der Veröffentlichung in erster Linie das Firmenarchiv in
+        Frankenberg. Es ist keineswegs als vollständig zu begreifen. Zu Beginn
+        umfasst es ca. 1.300 Objekte zur Grafikgeschichte Thonets, die
+        während der 200-jährigen Firmengeschichte entstanden. Auch die
+        Möbel der Firma werden langfristig in das digitale Archiv
+        aufgenommen. Zur besseren Übersicht werden grafische Arbeiten und
+        Möbel in zwei separaten Bereichen gesammelt, jedoch miteinander
+        verknüpft.
+        <br/>
+        <br/>
+        Weitere Arbeiten und Archive über Thonet sind jederzeit willkommen
+        und werden unter entsprechender Kennzeichnung aufgenommen. Eine
+        möglichst vollständige Aufzeichnung aller grafischen Arbeiten und
+        Möbel von oder über Thonet wird angestrebt, weshalb jeder Hinweis
+        mit Freude entgegen genommen wird.
+        <br/>
+        <br/>
+        <a class="mailto" href="mailto:mail@thonetarchiv.de">mail@thonetarchiv.de</a>
+    </p>
 {% endblock %}
 
