--- a/app/Resources/views/default/kontakt.html.twig
+++ b/app/Resources/views/default/kontakt.html.twig
@@ -1,14 +1,287 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} | Kontakt{% endblock %}
+{% block title %}{{ parent() }} | Kontakt/Impressum/Datenschutz{% endblock %}
 
 {% block headerBalken2 %}
-    <h1 class="col-12 header-titel">Kontakt</h1>
+    <h1 class="col-12 header-titel">Kontakt/Impressum/Datenschutz</h1>
 {% endblock %}
 
 {% block body %}
 
-    <h1>
-        Kontakt
-    </h1>
+    <p class="big-text half-size-text">
+
+        Das Forschungsprojekt »Die Marke Thonet« und dieses, damit in
+        Verbindung stehende, digitale Archiv wurde von der Grafikdesignerin
+        Lilo Schäfer initiiert und durch die Unterstützung der Thonet GmbH
+        ermöglicht.
+        <br/>
+        <br/>
+        <a href="http://liloschaefer.com">http://liloschaefer.com</a>
+        <br/>
+        <a href="http://www.thonet.de">http://www.thonet.de</a>
+        <br/>
+        <br/>
+        <small class="font-italic">Archiv und Design:</small> Lilo Schäfer
+        <br/>
+        <small class="font-italic">Programmierung:</small> Marius Lenzing
+
+        <small id="impressum"></small>
+
+        <br/>
+        <small class="font-italic">Diese Website enthält Fotografien von:</small> Maximilian Bier, Felix Obermaier,
+        Mascha Linke
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <small class="font-italic">Inhaber/Verantwortlich für den Inhalt:</small>
+        <br/>
+        <br/>
+        Lilo Schäfer
+        <br/>
+        Burghofstraße 90
+        <br/>
+        40223 Düsseldorf
+        <br/>
+        <a class="mailto" href="mailto:mail@thonetarchiv.de">mail@thonetarchiv.de</a>
+        <br/>
+        <br/>
+        <br/>
+        <small class="font-italic">Urheberrechterklärung:</small>
+        <br/>
+        <br/>
+        2019
+        <br/>
+        alle Rechte der hier gezeigten Arbeiten und Texte sind Eigentum von
+        Lilo Schäfer und der Thonet GmbH. Sie dürfen ohne Einverständnis
+        weder kopiert noch vervielfältigt oder veröffentlicht werden.
+        <br/>
+        <br/>
+        Die auf dieser Website veröffentlichten Inhalte unterliegen dem
+        deutschen Urheber- und Leistungsschutzrecht. Jede vom deutschen
+        Urheber- und Leistungsschutzrecht nicht zugelassene Verwertung
+        bedarf der vorherigen schriftlichen Zustimmung des Anbieters oder
+        jeweiligen Rechteinhabers. Dies gilt insbesondere für Vervielfältigung,
+        Bearbeitung, Übersetzung, Einspeicherung, Verarbeitung bzw.
+        Wiedergabe von Inhalten in Datenbanken oder anderen elektronischen
+        Medien und Systemen. Inhalte und Rechte Dritter sind dabei als solche
+        gekennzeichnet. Die unerlaubte Vervielfältigung oder Weitergabe
+        einzelner Inhalte oder kompletter Seiten ist nicht gestattet und strafbar.
+        Die Darstellung dieser Website in fremden Frames ist nur mit
+        schriftlicher Erlaubnis zulässig.Der Anbieter weist ausdrücklich darauf
+        hin, dass die Datenübertragung im Internet (z.B. bei der
+        Kommunikation per E-Mail) Sicherheitslücken aufweisen und nicht
+        lückenlos vor dem Zugriff durch Dritte geschützt werden kann. Die
+        Verwendung der Kontaktdaten des Impressums zur gewerblichen
+        Werbung ist ausdrücklich nicht erwünscht, es sei denn der Anbieter
+        hatte zuvor seine schriftliche Einwilligung erteilt oder es besteht bereits
+        eine Geschäftsbeziehung. Der Anbieter und alle auf dieser Website
+        genannten Personen widersprechen hiermit jeder kommerziellen
+        Verwendung und Weitergabe ihrer Daten. Der Nutzung von im Rahmen
+        der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur
+        Übersendung von nicht ausdrücklich angeforderter Werbung und
+        Informationsmaterialien wird hiermit ausdrücklich widersprochen. Der
+        Betreiber der Seiten behält sich ausdrücklich rechtliche Schritte im
+        Falle der unverlangten Zusendung von Werbeinformationen, etwa
+        durch Spam-Mails, vor.
+        <br/>
+        <br/>
+        <small class="font-italic">Haftungsausschluss:</small>
+        <br/>
+        Diese Website enthält Links zu externen Seiten, für deren Inhalt
+        ausschließlich die jeweiligen Anbieter bzw. Betreiber verantwortlich
+        sind.
+        Trotz sorgfältiger Prüfung zum Zeitpunkt der Verlinkung wird
+        keine Haftung für Inhalte dieser Seiten übernommen.
+
+        <small id="datenschutz"></small>
+
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <small class="font-italic">Datenschutzerklärung:</small>
+        <br/>
+        <small class="font-italic">1. Datenschutz auf einen Blick</small>
+        <br/>
+        <br/>
+        <small class="font-italic">Allgemeine Hinweise:</small>
+        <br/>
+        Die folgenden Hinweise geben einen einfachen Überblick darüber, was
+        mit Ihren personenbezogenen Daten passiert, wenn Sie unsere Website
+        besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie
+        persönlich identifiziert werden können. Ausführliche Informationen
+        zum Thema Datenschutz entnehmen Sie unserer unter diesem Text
+        aufgeführten Datenschutzerklärung.
+        <br/>
+        <br/>
+        <small class="font-italic">Datenerfassung auf dieser Website:</small>
+        <br/>
+        Die Datenverarbeitung auf dieser Website erfolgt durch den
+        Websitebetreiber. Dessen Kontaktdaten können Sie dem Impressum
+        dieser Website entnehmen. Ihre Daten werden zum einen dadurch
+        erhoben, dass Sie uns diese mitteilen. Hierbei kann es sich z.B. um
+        Daten handeln, die Sie in ein Kontaktformular eingeben. Andere Daten
+        werden automatisch beim Besuch der Website durch unsere ITSysteme
+        erfasst. Das sind vor allem technische Daten (z.B.
+        Internetbrowser, Betriebssystem oder Uhrzeit des Seitenaufrufs). Die
+        Erfassung dieser Daten erfolgt automatisch, sobald Sie unsere Website
+        betreten. Ein Teil der Daten wird erhoben, um eine fehlerfreie
+        Bereitstellung der Website zu gewährleisten. Andere Daten können zur
+        Analyse Ihres Nutzerverhaltens verwendet werden.
+        <br/>
+        <br/>
+        Sie haben jederzeit das Recht unentgeltlich Auskunft über Herkunft,
+        Empfänger und Zweck Ihrer gespeicherten personenbezogenen Daten
+        zu erhalten. Sie haben außerdem ein Recht, die Berichtigung, Sperrung
+        oder Löschung dieser Daten zu verlangen. Hierzu sowie zu weiteren
+        Fragen zum Thema Datenschutz können Sie sich jederzeit unter der im
+        Impressum angegebenen Adresse an uns wenden. Des Weiteren steht
+        Ihnen ein Beschwerderecht bei der zuständigen Aufsichtsbehörde zu.
+        <br/>
+        <br/>
+        <small class="font-italic">Analyse-Tools und Tools von Drittanbietern:</small>
+        <br/>
+        Beim Besuch unserer Website kann Ihr Surf-Verhalten statistisch
+        ausgewertet werden. Das geschieht vor allem mit Cookies und mit
+        sogenannten Analyseprogrammen. Die Analyse Ihres Surf-Verhaltens
+        erfolgt in der Regel anonym; das Surf-Verhalten kann nicht zu Ihnen
+        zurückverfolgt werden. Sie können dieser Analyse widersprechen oder
+        sie durch die Nichtbenutzung bestimmter Tools verhindern. Detaillierte
+        Informationen dazu finden Sie in der folgenden Datenschutzerklärung.
+        Sie können dieser Analyse widersprechen. Über die
+        Widerspruchsmöglichkeiten werden wir Sie in dieser
+        Datenschutzerklärung informieren.
+        <br/>
+        <br/>
+        <small class="font-italic">2. Allgemeine Hinweise und Pflichtinformationen</small>
+        <br/>
+        <br/>
+        <small class="font-italic">Datenschutz:</small>
+        <br/>
+        Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen
+        Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten
+        vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften
+        sowie dieser Datenschutzerklärung.
+        <br/>
+        Wenn Sie diese Website benutzen, werden verschiedene
+        personenbezogene Daten erhoben. Personenbezogene Daten sind
+        Daten, mit denen Sie persönlich identifiziert werden können. Die
+        vorliegende Datenschutzerklärung erläutert, welche Daten wir erheben
+        und wofür wir sie nutzen. Sie erläutert auch, wie und zu welchem
+        Zweck das geschieht.
+        <br/>
+        Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei
+        der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein
+        lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht
+        möglich.
+        <br/>
+        <br/>
+        <small class="font-italic">Hinweis zur verantwortlichen Stelle:</small>
+        <br/>
+        Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website
+        ist:
+        <br/>
+        Lilo Schäfer
+        <br/>
+        Burghofstraße 90
+        <br/>
+        40223 Düsseldorf
+        <br/>
+        <br/>
+        Verantwortliche Stelle ist die natürliche oder juristische Person, die
+        allein oder gemeinsam mit anderen über die Zwecke und Mittel der
+        Verarbeitung von personenbezogenen Daten (z.B. Namen, E-Mail-
+        Adressen o. Ä.) entscheidet.
+        <br/>
+        <br/>
+        <small class="font-italic">Widerruf Ihrer Einwilligung zur Datenverarbeitung:</small>
+        <br/>
+        Viele Datenverarbeitungsvorgänge sind nur mit Ihrer ausdrücklichen
+        Einwilligung möglich. Sie können eine bereits erteilte Einwilligung
+        jederzeit widerrufen. Dazu reicht eine formlose Mitteilung per E-Mail
+        an uns. Die Rechtmäßigkeit der bis zum Widerruf erfolgten
+        Datenverarbeitung bleibt vom Widerruf unberührt.
+        <br/>
+        <br/>
+        <small class="font-italic">Recht auf Datenübertragbarkeit:</small>
+        <br/>
+        Sie haben das Recht, Daten, die wir auf Grundlage Ihrer Einwilligung
+        oder in Erfüllung eines Vertrags automatisiert verarbeiten, an sich oder
+        an einen Dritten in einem gängigen, maschinenlesbaren Format
+        aushändigen zu lassen. Sofern Sie die direkte Übertragung der Daten an
+        einen anderen Verantwortlichen verlangen, erfolgt dies nur, soweit es
+        technisch machbar ist.
+        <br/>
+        <br/>
+        Sie haben im Rahmen der geltenden gesetzlichen Bestimmungen
+        jederzeit das Recht auf unentgeltliche Auskunft über Ihre
+        gespeicherten personenbezogenen Daten, deren Herkunft und
+        Empfänger und den Zweck der Datenverarbeitung und ggf. ein Recht
+        auf Berichtigung, Sperrung oder Löschung dieser Daten. Hierzu sowie
+        zu weiteren Fragen zum Thema personenbezogene Daten können Sie
+        sich jederzeit unter der im Impressum angegebenen Adresse an uns
+        wenden.
+        <br/>
+        <br/>
+        <small class="font-italic">3. Datenerfassung auf der Website</small>
+        <br/>
+        <br/>
+        <small class="font-italic">Cookies:</small>
+        <br/>
+        Die Internetseiten verwenden teilweise so genannte Cookies. Cookies
+        richten auf Ihrem Rechner keinen Schaden an und enthalten keine
+        Viren. Cookies dienen dazu, unser Angebot nutzerfreundlicher,
+        effektiver und sicherer zu machen. Cookies sind kleine Textdateien, die
+        auf Ihrem Rechner abgelegt werden und die Ihr Browser speichert. Die
+        meisten der von uns verwendeten Cookies sind so genannte “Session-
+        Cookies”. Sie werden nach Ende Ihres Besuchs automatisch gelöscht.
+        Andere Cookies bleiben auf Ihrem Endgerät gespeichert bis Sie diese
+        löschen. Diese Cookies ermöglichen es uns, Ihren Browser beim
+        nächsten Besuch wiederzuerkennen.
+        <br/>
+        <br/>
+        Sie können Ihren Browser so einstellen, dass Sie über das Setzen von
+        Cookies informiert werden und Cookies nur im Einzelfall erlauben, die
+        Annahme von Cookies für bestimmte Fälle oder generell ausschließen
+        sowie das automatische Löschen der Cookies beim Schließen des
+        Browser aktivieren. Bei der Deaktivierung von Cookies kann die
+        Funktionalität dieser Website eingeschränkt sein. Cookies, die zur
+        Durchführung des elektronischen Kommunikationsvorgangs oder zur
+        Bereitstellung bestimmter, von Ihnen erwünschter Funktionen (z.B.
+        Warenkorbfunktion) erforderlich sind, werden auf Grundlage von Art. 6
+        Abs. 1 lit. f DSGVO gespeichert. Der Websitebetreiber hat ein
+        berechtigtes Interesse an der Speicherung von Cookies zur technisch
+        fehlerfreien und optimierten Bereitstellung seiner Dienste. Soweit
+        andere Cookies (z.B. Cookies zur Analyse Ihres Surfverhaltens)
+        gespeichert werden, werden diese in dieser Datenschutzerklärung
+        gesondert behandelt.
+        <br/>
+        <br/>
+        <small class="font-italic">Server-Log-Dateien:</small>
+        <br/>
+        Der Provider der Seiten erhebt und speichert automatisch
+        Informationen in so genannten Server-Log-Dateien, die Ihr Browser
+        automatisch an uns übermittelt. Dies sind: Browsertyp und
+        Browserversion, verwendetes Betriebssystem, Referrer URL
+        Hostname des zugreifenden Rechners, Uhrzeit der Serveranfrage, IPAdresse.
+        Eine Zusammenführung dieser Daten mit anderen
+        Datenquellen wird nicht vorgenommen.
+        <br/>
+        <br/>
+        Grundlage für die Datenverarbeitung ist Art. 6 Abs. 1 lit. f DSGVO, der
+        die Verarbeitung von Daten zur Erfüllung eines Vertrags oder
+        vorvertraglicher Maßnahmen gestattet. Sie können die Speicherung der
+        Cookies durch eine entsprechende Einstellung Ihrer Browser-Software
+        verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall
+        gegebenenfalls nicht sämtliche Funktionen dieser Website
+        vollumfänglich werden nutzen können. Sie können darüber hinaus die
+        Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der
+        Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die
+        Verarbeitung dieser Daten durch Google verhindern.
+        <br/>
+        <br/>
+
+    </p>
 {% endblock %}
