--- a/app/Resources/views/default/arbeitenImKontext.html.twig
+++ b/app/Resources/views/default/arbeitenImKontext.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 
-    <p class="big-text">
+    <p class="big-text half-size-text">
         Das Forschungsprojekt »Die Marke Thonet« begann im Firmenarchiv
         Thonets, in Frankenberg an der Eder. Dieses verfügt über die gesamten,
         noch erhaltenen Produktkataloge, Drucksachen, Erscheinungsbilder
